--- a/spring-boot-testing-primer/pom.xml
+++ b/spring-boot-testing-primer/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.5.1</version>
+    <version>2.6.3</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -16,8 +16,9 @@
 
   <properties>
     <java.version>11</java.version>
-    <testcontainers.version>1.15.3</testcontainers.version>
-    <selenide.version>5.22.0</selenide.version>
+    <testcontainers.version>1.16.3</testcontainers.version>
+    <selenium.version>4.1.2</selenium.version>
+    <selenide.version>6.3.3</selenide.version>
   </properties>
 
   <dependencyManagement>
