--- a/write-concise-web-tests-with-selenide/pom.xml
+++ b/write-concise-web-tests-with-selenide/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.4.RELEASE</version>
+    <version>2.6.4</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -17,8 +17,9 @@
 
   <properties>
     <java.version>11</java.version>
-    <selenide.version>5.15.0</selenide.version>
-    <testcontainers.version>1.16.0</testcontainers.version>
+    <selenide.version>6.3.3</selenide.version>
+    <testcontainers.version>1.16.3</testcontainers.version>
+    <selenium.version>4.1.2</selenium.version>
   </properties>
 
   <dependencies>
@@ -35,12 +36,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.codeborne</groupId>
