--- a/open-rewrite-example/pom.xml
+++ b/open-rewrite-example/pom.xml
@@ -14,6 +14,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <testcontainers.version>1.15.3</testcontainers.version>
     <junit-jupiter.version>5.7.2</junit-jupiter.version>
+    <!-- Change to 3.12.4 after performing the migration -->
     <mockito.version>1.10.19</mockito.version>
   </properties>
 
