--- a/launchdarkly-java-development-testing-hints/pom.xml
+++ b/launchdarkly-java-development-testing-hints/pom.xml
@@ -15,6 +15,7 @@
     <testcontainers.version>1.15.3</testcontainers.version>
     <junit-jupiter.version>5.7.2</junit-jupiter.version>
     <mockito.version>3.10.0</mockito.version>
+    <awaitility.version>4.2.0</awaitility.version>
     <launchdarkly-java-server-sdk.version>5.7.1</launchdarkly-java-server-sdk.version>
   </properties>
 
@@ -44,6 +45,11 @@
       <version>${launchdarkly-java-server-sdk.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20220320</version>
+    </dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
@@ -52,6 +58,12 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-junit-jupiter</artifactId>
       <version>${mockito.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>${awaitility.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
