ignore false positive link error

--- a/.broken-link-config.json
+++ b/.broken-link-config.json
@@ -2,6 +2,9 @@
   "ignorePatterns": [
     {
       "pattern": "localhost:"
+    },
+    {
+      "pattern": "https://developer.github.com/apps/*"
     }
   ]
 }
