add working test

--- a/spring-cloud-aws-sqs-testing/spring-cloud-aws-sqs-testing/pom.xml
+++ b/spring-cloud-aws-sqs-testing/spring-cloud-aws-sqs-testing/pom.xml
@@ -20,6 +20,7 @@
     <java.version>17</java.version>
     <testcontainers.version>1.17.2</testcontainers.version>
     <spring-cloud-aws.version>2.4.1</spring-cloud-aws.version>
+    <awaitility.version>4.2.0</awaitility.version>
   </properties>
 
   <dependencies>
@@ -44,6 +45,12 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>${awaitility.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
