--- a/serverless-java-aws-examples/thumbnail-generator/pom.xml
+++ b/serverless-java-aws-examples/thumbnail-generator/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.serverless</groupId>
+  <groupId>de.rieckpil.blog</groupId>
   <artifactId>thumbnail-generator</artifactId>
   <version>1.0.0</version>
   <packaging>jar</packaging>
@@ -11,17 +11,27 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <aws-lambda-java-events.version>3.10.0</aws-lambda-java-events.version>
+    <aws-lambda-java-events.version>3.11.0</aws-lambda-java-events.version>
     <aws-lambda-java-core.version>1.2.1</aws-lambda-java-core.version>
-    <aws-java-sdk-s3.version>1.12.80</aws-java-sdk-s3.version>
-    <jaxb.version>2.3.3</jaxb.version>
+    <aws.java.sdk.version>2.16.1</aws.java.sdk.version>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>bom</artifactId>
+        <version>${aws.java.sdk.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
-      <groupId>com.amazonaws</groupId>
-      <artifactId>aws-java-sdk-s3</artifactId>
-      <version>${aws-java-sdk-s3.version}</version>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>s3</artifactId>
     </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
@@ -32,11 +42,6 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-lambda-java-core</artifactId>
       <version>${aws-lambda-java-core.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>jaxb-runtime</artifactId>
-      <version>${jaxb.version}</version>
     </dependency>
   </dependencies>
 
