--- a/spring-boot-feature-toggles-with-togglz/pom.xml
+++ b/spring-boot-feature-toggles-with-togglz/pom.xml
@@ -2,12 +2,14 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.0.RELEASE</version>
+    <version>2.7.0</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
+
   <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-boot-feature-toggles-with-togglz</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -15,8 +17,8 @@
   <description>Demo project for Spring Boot with Togglz</description>
 
   <properties>
-    <java.version>11</java.version>
-    <togglz.version>2.6.1.Final</togglz.version>
+    <java.version>17</java.version>
+    <togglz.version>3.2.1</togglz.version>
   </properties>
 
   <dependencies>
@@ -56,5 +58,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
