--- a/testcontainers-introduction/pom.xml
+++ b/testcontainers-introduction/pom.xml
@@ -99,6 +99,12 @@
       <artifactId>gcloud</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testcontainers</groupId>
+      <artifactId>testcontainers</artifactId>
+      <version>1.17.3</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
