--- a/spring-boot-thymeleaf-testing/pom.xml
+++ b/spring-boot-thymeleaf-testing/pom.xml
@@ -4,20 +4,18 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.1</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil</groupId>
   <artifactId>spring-boot-thymeleaf-testing</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-boot-thymeleaf-testing</name>
   <description>spring-boot-thymeleaf-testing</description>
 
   <properties>
-    <java.version>17</java.version>
     <htmlunit.version>2.63.0</htmlunit.version>
   </properties>
 
@@ -40,7 +38,7 @@
     </dependency>
     <dependency>
       <groupId>org.thymeleaf.extras</groupId>
-      <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+      <artifactId>thymeleaf-extras-springsecurity6</artifactId>
     </dependency>
 
     <dependency>
@@ -69,13 +67,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 </project>
