--- a/spring-boot-feature-toggles-with-togglz/pom.xml
+++ b/spring-boot-feature-toggles-with-togglz/pom.xml
@@ -4,20 +4,18 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-boot-feature-toggles-with-togglz</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-boot-feature-toggles-with-togglz</name>
   <description>Demo project for Spring Boot with Togglz</description>
 
   <properties>
-    <java.version>17</java.version>
     <togglz.version>3.2.1</togglz.version>
   </properties>
 
@@ -49,13 +47,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 </project>
