--- a/spring-boot-rest-assured/pom.xml
+++ b/spring-boot-rest-assured/pom.xml
@@ -4,19 +4,17 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-boot-rest-assured</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-boot-rest-assured</name>
 
   <properties>
-    <java.version>17</java.version>
     <rest-assured.version>5.1.1</rest-assured.version>
   </properties>
 
@@ -51,14 +49,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
-
 </project>
