--- a/spring-boot-web-mvc-testing/pom.xml
+++ b/spring-boot-web-mvc-testing/pom.xml
@@ -3,21 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.7</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-boot-web-mvc-testing</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-boot-web-mvc-testing</name>
   <description>spring-boot-web-mvc-testing</description>
-
-  <properties>
-    <java.version>17</java.version>
-  </properties>
 
   <dependencies>
     <dependency>
