--- a/spring-websocket-integration-tests/pom.xml
+++ b/spring-websocket-integration-tests/pom.xml
@@ -4,22 +4,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-websocket-integration-tests</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-websocket-integration-tests</name>
   <description>Demo project for Spring Boot</description>
-
-  <properties>
-    <java.version>17</java.version>
-    <awaitility.version>4.2.0</awaitility.version>
-  </properties>
 
   <dependencies>
     <dependency>
@@ -30,11 +24,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.awaitility</groupId>
-      <artifactId>awaitility</artifactId>
-      <version>${awaitility.version}</version>
     </dependency>
   </dependencies>
 
