--- a/spring-boot-test-slice-annotations/pom.xml
+++ b/spring-boot-test-slice-annotations/pom.xml
@@ -37,7 +37,7 @@
 
     <dependency>
       <groupId>de.flapdoodle.embed</groupId>
-      <artifactId>de.flapdoodle.embed.mongo</artifactId>
+      <artifactId>de.flapdoodle.embed.mongo.spring3x</artifactId>
       <version>4.12.2</version>
     </dependency>
 
