--- a/spring-boot-aws-integration-tests/pom.xml
+++ b/spring-boot-aws-integration-tests/pom.xml
@@ -16,7 +16,7 @@
   <description>Spring Boot integration tests with AWS services</description>
 
   <properties>
-    <awspring.version>2.3.2</awspring.version>
+    <awspring.version>3.1.0</awspring.version>
   </properties>
 
   <dependencies>
@@ -26,9 +26,13 @@
     </dependency>
     <dependency>
       <groupId>io.awspring.cloud</groupId>
-      <artifactId>spring-cloud-starter-aws-messaging</artifactId>
+      <artifactId>spring-cloud-aws-starter-sqs</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.awspring.cloud</groupId>
+      <artifactId>spring-cloud-aws-starter-s3</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>localstack</artifactId>
