include new projects

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,52 @@
     <module>spring-websocket-integration-tests</module>
     <module>spring-boot-test-mockmvc-webtestclient-testresttemplate</module>
     <module>spring-mockmvc-with-webtestclient</module>
+    <module>load-testing-your-application</module>
+    <module>whats-new-in-spring-boot-2.1</module>
+    <module>whats-new-in-spring-boot-2.2</module>
+    <module>whats-new-in-spring-boot-2.3</module>
+    <module>avoid-repeating-attributes-in-jpa-entities</module>
+    <module>lazy-loading-of-jpa-attributes-with-hibernate</module>
+    <module>send-emails-with-sendgrid-and-spring-boot</module>
+    <module>demo-crud-application</module>
+    <module>deploy-spring-boot-to-gke</module>
+    <module>spring-boot-hibernate-flyway-best-practices</module>
+    <module>spring-boot-with-kotlin</module>
+    <module>difference-between-mock-and-mockbean</module>
+    <module>spring-boot-override-test-properties</module>
+    <module>spring-boot-test-mail-sending</module>
+    <module>spring-boot-shedlock</module>
+    <module>spring-data-mongo-test-testcontainers</module>
+    <module>dynamic-sql-querying-with-pagination</module>
+    <module>spring-boot-integration-tests-testcontainers</module>
+    <module>remote-debugging-spring-boot-application</module>
+    <module>spring-web-client-demo</module>
+    <module>spring-boot-uploading-and-downloading-files-with-react</module>
+    <module>spring-web-client-oauth2-reactive-stack</module>
+    <module>spring-web-client-oauth2-servlet-stack</module>
+    <module>spring-web-test-client</module>
+    <module>spring-web-client-customizing</module>
+    <module>spring-web-client-testing-with-mockwebserver</module>
+    <module>spring-web-client-exchange-retrieve</module>
+    <module>spring-web-test-client</module>
+    <module>maven-plugins-to-ensure-quality</module>
+    <module>github-actions-java-maven</module>
+    <module>spring-web-client-expose-metrics</module>
+    <module>spring-boot-selenium-integration-tests</module>
+    <module>testing-json-serialization-spring</module>
+    <module>spring-web-mvc-cheat-sheet</module>
+    <module>spring-boot-aws-ssm-parameter-resolving</module>
+    <module>spring-security-aws-cognito-thymeleaf</module>
+    <module>testcontainers-reuse-existing-containers</module>
+    <module>spring-test-context-caching-introduction</module>
+    <module>spring-boot-kotlin-testcontainers</module>
+    <module>testing-spring-boot-applications-with-mockmvc</module>
+    <module>write-concise-web-tests-with-selenide</module>
+    <module>spring-boot-test-spring-events</module>
+    <module>spring-boot-testing-tips-and-tricks</module>
+    <module>expose-git-information-actuator</module>
+    <module>dependency-version-update-plugin</module>
+    <module>testing-spring-rest-template</module>
   </modules>
 
   <dependencyManagement>
