--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,68 +1,30 @@
-name: Build Maven Projects
+name: Build Maven Projects (Java 8, 11, 17)
+
 on:
   push:
   schedule:
     - cron: '0 5 * * SUN'
+
 jobs:
-  build-java-8-and-17-projects:
+  build-java-8-11-17-projects:
     strategy:
       fail-fast: false
       matrix:
-        versions: [8, 17]
-    runs-on: ubuntu-20.04
+        versions: [8, 11, 17]
+    runs-on: ubuntu-latest
     name: Build Java ${{ matrix.versions }} projects
     steps:
       - name: VCS checkout
-        uses: actions/checkout@v1
-
-      - name: Set up cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-jdk${{ matrix.versions }}-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-jdk${{ matrix.versions }}-
+        uses: actions/checkout@v4
 
       - name: Set up JDK ${{ matrix.versions }}
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.versions }}
-          distribution: 'adopt'
-          java-package: 'jdk'
+          distribution: adopt
+          cache: maven
 
       - name: Build all projects with Maven
         run: |
           chmod +x ./buildJdk${{ matrix.versions }}Projects.sh
           ./buildJdk${{ matrix.versions }}Projects.sh
-
-  build-java-11-project-batches:
-    strategy:
-      fail-fast: false
-      matrix:
-        batch: [1, 2, 3]
-    runs-on: ubuntu-20.04
-    name: Build Java 11 Batch ${{ matrix.batch }} projects
-    steps:
-      - name: VCS checkout
-        uses: actions/checkout@v1
-
-      - name: Set up cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-jdk${{ matrix.batch }}-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-jdk${{ matrix.batch }}-
-
-      - name: Set up JDK $11
-        uses: actions/setup-java@v2
-        with:
-          java-version: 11
-          distribution: 'adopt'
-          java-package: 'jdk'
-
-      - name: Build all projects of batch with Maven
-        run: |
-          chmod +x ./buildJdk11Projects_0${{ matrix.batch }}.sh
-          ./buildJdk11Projects_0${{ matrix.batch }}.sh
-          
