--- a/spring-security-aws-cognito-thymeleaf/pom.xml
+++ b/spring-security-aws-cognito-thymeleaf/pom.xml
@@ -4,21 +4,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.0.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-security-aws-cognito-thymeleaf</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-security-aws-cognito-thymeleaf</name>
   <description>Demo project using AWS Cognito with Spring Security</description>
-
-  <properties>
-    <java.version>11</java.version>
-  </properties>
 
   <dependencies>
     <dependency>
