--- a/github-actions-java-maven/pom.xml
+++ b/github-actions-java-maven/pom.xml
@@ -2,20 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.2.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
-  <groupId>de.rieckpil.blog</groupId>
+
   <artifactId>github-actions-java-maven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>github-actions-java-maven</name>
   <description>Demo project for Spring Boot</description>
 
   <properties>
-    <java.version>11</java.version>
     <testcontainers.version>1.16.0</testcontainers.version>
   </properties>
 
