--- a/spring-boot-aws-ssm-parameter-resolving/pom.xml
+++ b/spring-boot-aws-ssm-parameter-resolving/pom.xml
@@ -2,13 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.2.6.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
-  <groupId>de.rieckpil.blog</groupId>
+
   <artifactId>spring-boot-aws-ssm-parameter-resolving</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-boot-aws-ssm-parameter-resolving</name>
