--- a/spring-web-client-demo/pom.xml
+++ b/spring-web-client-demo/pom.xml
@@ -4,20 +4,18 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.5</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>spring-web-client-demo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>spring-web-client-demo</name>
   <description>Demo project for Spring Boot</description>
 
   <properties>
-    <java.version>11</java.version>
     <mockwebserver.version>4.8.0</mockwebserver.version>
     <okhttp3.version>4.8.0</okhttp3.version>
   </properties>
