--- a/testing-json-serialization-spring/pom.xml
+++ b/testing-json-serialization-spring/pom.xml
@@ -2,22 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.5</version>
-    <relativePath/> <!-- lookup parent from repository -->
-  </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
+  <parent>
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
   <artifactId>testing-json-serialization-spring</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>testing-json-serialization-spring</name>
   <description>Testing JSON serialization with Spring Boot</description>
-
-  <properties>
-    <java.version>11</java.version>
-  </properties>
 
   <dependencies>
     <dependency>
