--- a/testing-spring-rest-template/pom.xml
+++ b/testing-spring-rest-template/pom.xml
@@ -2,22 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.5</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>testing-spring-rest-template</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>testing-spring-rest-template</name>
   <description>Demo project for Spring Boot</description>
-
-  <properties>
-    <java.version>16</java.version>
-  </properties>
 
   <dependencies>
     <dependency>
