--- a/whats-new-in-spring-boot-2.2/pom.xml
+++ b/whats-new-in-spring-boot-2.2/pom.xml
@@ -3,21 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+
+  <parent>
     <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
+
     <artifactId>whats-new-in-spring-boot.2.2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>whats-new-in-spring-boot.2.2</name>
+    <name>whats-new-in-spring-boot-2.2</name>
     <description>What's new in Spring Boot 2.2</description>
-
-    <properties>
-        <java.version>11</java.version>
-    </properties>
 
     <dependencies>
         <dependency>
