--- a/write-concise-web-tests-with-selenide/pom.xml
+++ b/write-concise-web-tests-with-selenide/pom.xml
@@ -2,21 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.4</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>write-concise-web-tests-with-selenide</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>write-concise-web-tests-with-selenide</name>
   <description>Concise Web Tests with Selenide</description>
 
   <properties>
-    <java.version>11</java.version>
     <selenide.version>6.3.3</selenide.version>
     <testcontainers.version>1.16.3</testcontainers.version>
     <selenium.version>4.3.0</selenium.version>
